[package]
name = "balancer-pool"
version = "0.1.0"
authors = ["Illia Polosukhin <illia.polosukhin@gmail.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = "*"
near-sdk = "0.11.0"
borsh = "0.6.2"
# near-sdk = "1.0.0"
uint = { version = "0.8.3", default-features = false }
wee_alloc = { version = "0.4.5", default-features = false, features = [] }
near-lib = { path = "../near-lib-rs" }

[dev-dependencies]
near-test = { path = "../near-test-rs" }
lazy_static = "1.4.0"
