[package]
name = "multiswap"
version = "0.1.0"
authors = ["Illia Polosukhin <illia.polosukhin@gmail.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[dependencies]
near-sdk = { git = "https://github.com/near/near-sdk-rs", rev = "0b3419cac5af87fb7e71136af2a40df7cb4a1ad5" }
near-contract-standards = { git = "https://github.com/near/near-sdk-rs", rev = "0b3419cac5af87fb7e71136af2a40df7cb4a1ad5" }
uint = { version = "0.9.0", default-features = false }
